SONAR: Code smells