@@ -7,7 +7,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ItemMapper {
@@ -20,6 +19,6 @@ public class ItemMapper {
     }
 
     public List<ItemDao> map(List<Item> itemList) {
-        return itemList.stream().map(this::map).collect(Collectors.toList());
+        return itemList.stream().map(this::map).toList();
     }
 }
