@@ -13,7 +13,6 @@ import org.springframework.stereotype.Component;
 
 import javax.annotation.PostConstruct;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class SafeboxMapper {
@@ -38,6 +37,6 @@ public class SafeboxMapper {
     }
 
     public List<SafeboxDao> map(List<Safebox> safeboxList) {
-        return safeboxList.stream().map(this::map).collect(Collectors.toList());
+        return safeboxList.stream().map(this::map).toList();
     }
 }
